# Haskell-database

./: .gitignore  Haskell-database.cabal  LICENSE  Makefile  stack.yaml
src/: Main.hs
src/Database/: Core.hs  Types.hs
src/Operations/: Add.hs  Delete.hs  Search.hs
test/: Spec.hs
